--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,25 @@
+
+
 <footer class="footer">
-    <div class="row">
-        <p>@Realizado por mí. Año: 2020</p>
-    </div>
+
+   <div class="container">
+
+      <div class="row">
+
+         <div class="col-md-6 logo-footer">
+            <img src="../../../assets/img/logo_gris.png" alt="logo" srcset="">
+            <p>Diseñado por Roberto Fernández @2020</p>
+         </div>
+         <div class="col-md-6 iconos-redes-footer">
+            <img src="../../../assets/img/facebook.png" alt="facebook">
+            <img src="../../../assets/img/instagram.png" alt="instagram">
+            <img src="../../../assets/img/twitter.png" alt="twitter">
+         </div>
+
+      </div>
+
+   </div>
+
 </footer>
+
+
