--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,32 +6,38 @@
 
       <mat-card class="example-card">
 
-        <form class="example-form" [formGroup]="myForm">
+         <form class="example-form" [formGroup]="myForm">
 
-          <mat-card-header>
-            <mat-card-title>Login</mat-card-title>
-            <mat-card-subtitle>Ingresa tus datos</mat-card-subtitle>
-          </mat-card-header>
+            <div class="col-md-12 imagen-login">
+               <img src="../../../assets/img/admin.png" alt="login">
+            </div>
 
-          <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Usuario</mat-label>
-            <input matInput formControlName="usuario"  autocomplete="off">
-          </mat-form-field>
+            <div class="titulo-login">
+               <h1>Login</h1>
+            </div>
 
-          <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Introduce tu contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+               <mat-label>Usuario</mat-label>
+               <input matInput formControlName="usuario"  autocomplete="off">
+            </mat-form-field>
 
-          <mat-card-actions align="center">
-            <button mat-raised-button color="primary" (click)="login()">Entrar</button>&nbsp;
-            <button mat-flat-button (click)="openDialogRegister()">registrarme</button>
-          </mat-card-actions>
+            <mat-form-field class="example-full-width" appearance="fill">
+               <mat-label>Introduce tu contraseña</mat-label>
+               <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+               <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+               </button>
+            </mat-form-field>
 
-        </form>
+            <div class="col-md-12 btn-entrar-login">
+               <button mat-raised-button color="primary" (click)="login()">Entrar</button>
+            </div>
+
+            <div class="col-md-12 btn-registrarme-login">
+               <button mat-flat-button (click)="openDialogRegister()">registrarme</button>
+            </div>
+
+         </form>
 
       </mat-card>
 
