--- a/src/app/pages/productos/productos.component.scss
+++ b/src/app/pages/productos/productos.component.scss
@@ -6,6 +6,14 @@
     min-width: 150px;
     max-width: 500px;
     width: 100%;
+
+    img {
+       height: 180px;
+       padding: 5px;
+       object-fit: contain;
+
+    }
+
 }
 
 .example-full-width {
@@ -13,3 +21,9 @@
     height: 75px;
 }
 
+.image-table-productos {
+   height: 70px;
+   width: 80px;
+   object-fit: contain;
+   padding: 2px;
+}
