--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,20 +1,25 @@
-.footer{
-    margin-top: 100px;
-    height: 200px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    
-    .row{
-        width: 500px;
-        height: 50px;
-        margin: 0 auto;
+.footer {
+   margin-top: 100px;
+   height: 21em;
+   background-color: white;
+   display: flex;
+   align-items: center;
 
-        p{
-            text-align: center;
-            height: 100%;
-            width: 100%;
-            color: gray;
-        }
-    }
+   .logo-footer {
+      img {
+         width: 18em;
+      }
+      p {
+         color: dimgray;
+         font-size: 12px;
+      }
+   }
+
+   .iconos-redes-footer {
+      text-align: center;
+      img {
+         width: 50px;
+         margin: 0 7px;
+      }
+   }
 }
