--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,32 +1,77 @@
-@import '../../../variables';
+@import "../../../variables";
 
 button {
-  margin: 0 10px 0 10px;
+   margin: 0 10px 0 10px;
 }
 
-mat-toolbar{
-  box-shadow: $sombreado-navbar;
+mat-toolbar {
+   box-shadow: $sombreado-navbar;
 }
 
-.mat-menu-panel, #mat-menu-panel-0 {
-  overflow: hidden !important;
+.mat-menu-panel,
+#mat-menu-panel-0 {
+   overflow: hidden !important;
 }
 
 .example-spacer {
-  flex: 1 1 auto;
+   flex: 1 1 auto;
 }
 
-.col-menu{
-  text-align: right;
+.col-logo {
+   img {
+      width: 10em;
+      vertical-align: bottom;
+      outline: none;
+      cursor: pointer;
+      padding-top: 8px;
+
+   }
 }
 
+.col-menu {
+   text-align: right;
 
-.logo-img{
-  height: 35px;
-  vertical-align: middle;
-  font-family: 'pacific';
+   .enlaces {
+      height: 100%;
+      button {
+         height: 100%;
+      }
+   }
 }
 
-button{
-  margin: 0px !important;
+.col-avatar {
+   padding-left: 0 !important;
+   padding-right: 0 !important;
+   img {
+      border-radius: 50%;
+      object-fit: cover;
+      width: 50px;
+      height: 50px;
+      vertical-align: bottom;
+      cursor: pointer;
+      border-color: white;
+      border-style: solid;
+      border-width: 3px;
+      background-color: gainsboro;
+      transition: 0.2s;
+   }
+
+   img:hover {
+      transform: scale(1.1);
+   }
+}
+
+.example-container {
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+}
+
+.example-radio-group {
+   display: block;
+   border: 1px solid #555;
+   margin: 20px;
+   padding: 10px;
 }
