--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,10 +59,10 @@ input[type="file"] {
 }
 
 //form productos: img
-.card-form-img{
-  height: 180px;
-  object-fit: cover;
-}
+// .card-form-img{
+//   height: 180px;
+//   object-fit: cover;
+// }
 
 //IMG CARD
 .card-home-img {
@@ -124,12 +124,6 @@ input[type="file"] {
 
 
 
-
-
-
-
-
-
 // PADDING Y
 .py-1{
   padding: 10px 0;
@@ -171,3 +165,45 @@ input[type="file"] {
 .px-5{
   padding: 0 50px;
 }
+
+////////// MARGIN Y
+.my-1{
+   margin: 10px 0;
+ }
+
+ .my-2{
+   margin: 20px 0;
+ }
+
+ .my-3{
+   margin: 30px 0;
+ }
+
+ .my-4{
+   margin: 40px 0;
+ }
+
+ .my-5{
+   margin: 50px 0;
+ }
+
+ //MARGIN X
+ .mx-1{
+   margin: 0 10px;
+ }
+
+ .mx-2{
+   margin: 0 20px;
+ }
+
+ .mx-3{
+   margin: 0 30px;
+ }
+
+ .mx-4{
+   margin: 0 40px;
+ }
+
+ .mx-5{
+   margin: 0 50px;
+ }
